syntax = "proto3";
package tbClient.post.common;
import "Item/Item.proto";

message Content {
    uint32 type = 1;
    string text = 2;
    string link = 3;
    string src = 4;
    string bsize = 5;
    string big_src = 6;
    string big_size = 7;
    string cdn_src = 8;
    string big_cdn_src = 9;
    string imgtype = 10;
    string c = 11;
    string voice_md5 = 12;
    uint32 during_time = 13;
    uint32 is_sub = 14;
    int64 uid = 15;
    string dynamic = 16;
    string _static = 17;
    uint32 width = 18;
    uint32 height = 19;
    string packet_name = 20;
    string phonetype = 21;
    uint32 is_native_app = 22;
    message NativeApp {
        string jump_and = 1;
        string jump_ios = 2;
        string download_and = 3;
        string download_ios = 4;
    };
    NativeApp native_app = 23;
    uint32 e_type = 24;
    string origin_src = 25;
    uint32 btn_type = 26;
    uint32 origin_size = 27;
    int32 count = 28;
    message GraffitiInfo {
        string url = 1;
        int64 gid = 2;
    };
    GraffitiInfo graffiti_info = 29;
    message TogetherHi {
        string album_name = 1;
        uint64 album_id = 2;
        uint32 start_time = 3;
        uint32 end_time = 4;
        string location = 5;
        uint32 num_signup = 6;
        repeated string potraits = 7;
        uint32 num_join = 8;
        repeated string pic_urls = 9;
    }
    TogetherHi high_together = 30;
    string media_subtitle = 31;
    int32 url_type = 32;
    message MemeInfo {
        uint32 pck_id = 1;
        uint64 pic_id = 2;
        string pic_url = 3;
        string thumbnail = 4;
        uint32 width = 5;
        uint32 height = 6;
        string detail_link = 7;
    };
    MemeInfo meme_info = 33;
    uint32 is_long_pic = 34;
    uint32 show_original_btn = 35;
    string cdn_src_active = 36;
    string topic_special_icon = 37;
    uint64 item_id = 38;
    string item_forum_name = 39;
    message TiebaPlusInfo {
        string title = 1;
        string desc = 2;
        string jump_url = 3;
        string download_url = 4;
        string app_id = 5;
        string app_icon = 6;
        string app_package = 7;
        string app_version = 8;
        string app_privacy = 9;
        string app_power = 10;
        string app_company = 11;
        int32 target_type = 12;
        int32 h5_jump_type = 13;
        string h5_jump_number = 14;
        string h5_jump_param = 15;
        int32 jump_type = 16;
        string item_id = 17;
        int32 is_appoint = 18;
        message PluginUser {
            int64 user_id = 1;
            string user_name_show = 2;
            int32 user_type = 3;
            string user_photo = 4;
            int32 is_download_card_whiteuser = 5;
        };
        PluginUser plugin_user = 19;
        string forum_name = 20;
        int32 jump_setting = 21;
        string wx_thumbnail = 22;
        string button_desc = 23;
    }
    TiebaPlusInfo tiebaplus_info = 40;
    tbClient.item.Item item = 41;
    int64 pic_id = 42;
}
